--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>RV</title>
+		<title>RV | NIKE SHOP</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/owl.carousel.min.css" />
 		<link rel="stylesheet" href="css/owl.theme.default.min.css" />
